--- a/.drone.yml
+++ b/.drone.yml
@@ -14,7 +14,7 @@ pipeline:
     deploy-production:
       image: plugins/s3
       acl: public-read
-      region: "eu-west-2"
+      region: "us-east-1"
       bucket: "yhp.io"
       source: public/**/*
       strip_prefix: public/
